force-app/main/default/objects/Permanency_Plan__c/fields/child_residing_in_a_foster_family_home__c.field-meta.xml
<CustomField>
    <fullName>child_residing_in_a_foster_family_home__c</fullName>
    <inlineHelpText>Is the child residing in a foster family home or childcare institution with their minor parent who was with countary to welfare or voluntary placement agreement?</inlineHelpText>
    <label>child residing in a foster family home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>