force-app/main/default/objects/Permanency_Plan__c/fields/child_s_relationship_with_his_her_birth__c.field-meta.xml
<CustomField>
    <fullName>child_s_relationship_with_his_her_birth__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to child&apos;s relationship with his/her birth family</inlineHelpText>
    <label>child&apos;s relationship with his/her birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>