force-app/main/default/objects/Permanency_Plan__c/fields/Child_was_in_an_Approved_Pre_Adoptive__c.field-meta.xml
<CustomField>
    <fullName>Child_was_in_an_Approved_Pre_Adoptive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child was in an Approved Pre-Adoptive Placement and removal</inlineHelpText>
    <label>Child was in an Approved Pre-Adoptive</label>
    <type>Checkbox</type>
</CustomField>