force-app/main/default/objects/Permanency_Plan__c/fields/children_born_to_child_biological_parent__c.field-meta.xml
<CustomField>
    <fullName>children_born_to_child_biological_parent__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to other children born to the child&apos;s biological parents</inlineHelpText>
    <label>children born to child biological parent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>