force-app/main/default/objects/Permanency_Plan__c/fields/CJAMS_PID__c.field-meta.xml
<CustomField>
    <fullName>CJAMS_PID__c</fullName>
    <formula>Service_Case__r.Placement_Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casevault PID #</label>
    <type>Text</type>
</CustomField>