force-app/main/default/objects/Permanency_Plan__c/fields/commitment_Caring_Permanently_for_Child__c.field-meta.xml
<CustomField>
    <fullName>commitment_Caring_Permanently_for_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) demonstrate a strong commitment to caring permanently for the child and a strong attachment is evident between a child and a relative caregiver.</inlineHelpText>
    <label>commitment Caring Permanently for Child</label>
    <type>Checkbox</type>
</CustomField>