force-app/main/default/objects/Permanency_Plan__c/fields/Complete_Annual_Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Complete_Annual_Reconsideration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Caregiver must complete annual reconsideration to continue the assistance. The  Caregiver must notify the department of social services and the court if there are any in the child&apos;s living arrangements</inlineHelpText>
    <label>Complete Annual Reconsideration</label>
    <type>Checkbox</type>
</CustomField>