force-app/main/default/objects/Permanency_Plan__c/fields/Complete_child_assessment_request_form__c.field-meta.xml
<CustomField>
    <fullName>Complete_child_assessment_request_form__c</fullName>
    <inlineHelpText>Complete the applicable child assessment request form and upload the form in the File cabinet</inlineHelpText>
    <label>Complete child assessment request form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>