force-app/main/default/objects/Permanency_Plan__c/fields/Comprehensive_Home_Study__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Home_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) has completed or is in the process of completing a comprehensive home Study</inlineHelpText>
    <label>Comprehensive Home Study</label>
    <type>Checkbox</type>
</CustomField>