force-app/main/default/objects/Permanency_Plan__c/fields/Concurrent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>