force-app/main/default/objects/Permanency_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permanency Plans</relationshipLabel>
    <relationshipName>Permanency_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>