force-app/main/default/objects/Permanency_Plan__c/fields/Continue_the_Guardianship_Assistance_Pay__c.field-meta.xml
<CustomField>
    <fullName>Continue_the_Guardianship_Assistance_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) understand that an annual reconsideration must be completed to continue the guardianship assistance payment.</inlineHelpText>
    <label>Continue the Guardianship Assistance Pay</label>
    <type>Checkbox</type>
</CustomField>