force-app/main/default/objects/Permanency_Plan__c/fields/Court_hearing_occurs__c.field-meta.xml
<CustomField>
    <fullName>Court_hearing_occurs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court hearing occurs</label>
    <type>Checkbox</type>
</CustomField>