force-app/main/default/objects/Permanency_Plan__c/fields/Court_order_of_TPR_for_parents__c.field-meta.xml
<CustomField>
    <fullName>Court_order_of_TPR_for_parents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court order of TPR for parents</label>
    <type>Checkbox</type>
</CustomField>