force-app/main/default/objects/Permanency_Plan__c/fields/Court_order_received_and_upload_in_CJAMS__c.field-meta.xml
<CustomField>
    <fullName>Court_order_received_and_upload_in_CJAMS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Court order received and uploaded in Casevault</inlineHelpText>
    <label>Court order received&amp;upload in Casevault</label>
    <type>Checkbox</type>
</CustomField>