force-app/main/default/objects/Permanency_Plan__c/fields/Criminal_Child_Protective_Clearances__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Child_Protective_Clearances__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relative Caregiver(s) UnderStandrd that they are a CPA provider, they must complete a criminal and child protective clearances under the authorization of the local department</inlineHelpText>
    <label>Criminal &amp; Child Protective Clearances</label>
    <type>Checkbox</type>
</CustomField>