force-app/main/default/objects/Permanency_Plan__c/fields/D_O_B__c.field-meta.xml
<CustomField>
    <fullName>D_O_B__c</fullName>
    <formula>Contact__r.Date_of_Birth__c</formula>
    <label>D.O.B</label>
    <type>Date</type>
</CustomField>