force-app/main/default/objects/Permanency_Plan__c/fields/Date_Agreement_signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreement_signed__c</fullName>
    <inlineHelpText>Date Agreement signed</inlineHelpText>
    <label>Date Agreement signed</label>
    <type>Date</type>
</CustomField>