force-app/main/default/objects/Permanency_Plan__c/fields/Date_Exception_granted_child_interests__c.field-meta.xml
<CustomField>
    <fullName>Date_Exception_granted_child_interests__c</fullName>
    <inlineHelpText>Date and time for Exception granted in child&apos;s best interests</inlineHelpText>
    <label>Date Exception granted child interests</label>
    <type>Date</type>
</CustomField>