force-app/main/default/objects/Permanency_Plan__c/fields/Date_of_first_court_order_CINA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_court_order_CINA__c</fullName>
    <inlineHelpText>Date of first court order with best interest or CTW finding if converted to CINA</inlineHelpText>
    <label>Date of first court order CINA</label>
    <type>Date</type>
</CustomField>