force-app/main/default/objects/Permanency_Plan__c/fields/Date_of_first_court_order_CTW__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_court_order_CTW__c</fullName>
    <inlineHelpText>Date of first court order with CTW</inlineHelpText>
    <label>Date of first court order CTW</label>
    <type>Date</type>
</CustomField>