force-app/main/default/objects/Permanency_Plan__c/fields/Date_of_Planning_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Planning_Meeting__c</fullName>
    <label>Date of Planning Meeting</label>
    <type>Date</type>
</CustomField>