force-app/main/default/objects/Permanency_Plan__c/fields/Date_of_relinquishment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_relinquishment__c</fullName>
    <label>Date of relinquishment</label>
    <type>Date</type>
</CustomField>