force-app/main/default/objects/Permanency_Plan__c/fields/Date_of_removal__c.field-meta.xml
<CustomField>
    <fullName>Date_of_removal__c</fullName>
    <label>Date of removal</label>
    <type>Date</type>
</CustomField>