force-app/main/default/objects/Permanency_Plan__c/fields/Describe_how_the_worker_is_carrying_out__c.field-meta.xml
<CustomField>
    <fullName>Describe_how_the_worker_is_carrying_out__c</fullName>
    <inlineHelpText>Describe how the worker is carrying out specific court orders pertaining to the child</inlineHelpText>
    <label>Describe how the worker is carrying out</label>
    <type>TextArea</type>
</CustomField>