force-app/main/default/objects/Permanency_Plan__c/fields/Describe_how_the_worker_is_ensuring__c.field-meta.xml
<CustomField>
    <fullName>Describe_how_the_worker_is_ensuring__c</fullName>
    <inlineHelpText>Describe how the worker is ensuring that the child receives safe and appropriate care. Discuss specific outcomes of ongoing/past services that have been offered to the child during the assessment period?</inlineHelpText>
    <label>Describe how the worker is ensuring</label>
    <type>TextArea</type>
</CustomField>