force-app/main/default/objects/Permanency_Plan__c/fields/Describe_the_parent_s_compliance__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_parent_s_compliance__c</fullName>
    <inlineHelpText>Describe the parent&apos;s compliance in developing and carrying out the terms of the Service Agreement. (Discuss specific outcomes during this assessment period). Describe the parent&apos;s involvement including dates of case planing meetings</inlineHelpText>
    <label>Describe the parent&apos;s compliance</label>
    <type>TextArea</type>
</CustomField>