force-app/main/default/objects/Permanency_Plan__c/fields/Director_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Director_Sign_Date__c</fullName>
    <inlineHelpText>Director Sign Date</inlineHelpText>
    <label>Director Sign Date</label>
    <type>Date</type>
</CustomField>