force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Adoption_has_been_ruled_out__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Adoption_has_been_ruled_out__c</fullName>
    <inlineHelpText>Adoption has been ruled out as a permanency plan</inlineHelpText>
    <label>Adoption has been ruled out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>