force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Age_Appropriate_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Age_Appropriate_Consultation__c</fullName>
    <inlineHelpText>If the child is 14 years of age. Has an age appropriate consultation take place with the child regarding the guardianship arrangement</inlineHelpText>
    <label>Age Appropriate Consultation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>