force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_agreement_prior_to_the_award__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_agreement_prior_to_the_award__c</fullName>
    <inlineHelpText>The caregiver entered an agreement prior to the awarded custody and guardianship by the court in order to receive the assistance payment.</inlineHelpText>
    <label>Entered an agreement prior to the award</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>