force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Annual_Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Annual_Reconsideration__c</fullName>
    <inlineHelpText>The caregiver must complete annual reconsideration to continue the assistance.The caregiver must notify the local department of social services and the court if there are any changes in child&apos;s living.</inlineHelpText>
    <label>Annual Reconsideration to Continue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>