force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Approval_Status__c</fullName>
    <label>Disclosure Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>