force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Approved_by__c</fullName>
    <label>Disclosure Approved by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>