force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Approved_Date__c</fullName>
    <label>Disclosure Approved Date</label>
    <type>Date</type>
</CustomField>