force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Assistance_will_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Assistance_will_Immediately__c</fullName>
    <inlineHelpText>The Caregiver understands that the assistance will immediately be suspended if the child is no longer living with a guardian. The assistance will be terminated if the child is not returned to the custody of the guardian within sixty(60) days.</inlineHelpText>
    <label>Assistance will Immediately be Suspended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>