force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_authorization_mental_health__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_authorization_mental_health__c</fullName>
    <inlineHelpText>The caregiver is willing to complete authorization of mental health history.</inlineHelpText>
    <label>authorization of mental health history.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>