force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_caseworker_discussed_require__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_caseworker_discussed_require__c</fullName>
    <inlineHelpText>The caregiver and the caseworker have discussed the requirements and expectation for participating in the guardianship Assistance Program</inlineHelpText>
    <label>caseworker have discussed  requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>