force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_child_be_under_18_year_of_age__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_child_be_under_18_year_of_age__c</fullName>
    <inlineHelpText>The child must be under 18 years of age at the time of the court hearing awarding custody and guardianship</inlineHelpText>
    <label>child must be under 18 years of age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>