force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_committed_to_the_State__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_committed_to_the_State__c</fullName>
    <inlineHelpText>The Child has been committed to the State and placed with the provider for alteast six(6) monts</inlineHelpText>
    <label>committed to the State and placed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>