force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Creation_Date__c</fullName>
    <label>Disclosure Creation Date</label>
    <type>Date</type>
</CustomField>