force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_independent_mean_of_financial__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_independent_mean_of_financial__c</fullName>
    <inlineHelpText>The caregiver has an independent means of financial for themselves and their other than guardianship Assistance program</inlineHelpText>
    <label>independent means of financial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>