force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_orientation_meeting_or__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_orientation_meeting_or__c</fullName>
    <inlineHelpText>The caregiver attended an orientation meeting or received an overview from the caseworker</inlineHelpText>
    <label>orientation meeting or received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>