force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_participate_in_Guardianship__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_participate_in_Guardianship__c</fullName>
    <inlineHelpText>The caregiver agrees to participate in Guardianship Assistance Program.</inlineHelpText>
    <label>participate in Guardianship Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>