force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_provide_aftercare_service__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_provide_aftercare_service__c</fullName>
    <inlineHelpText>The caregiver understands that the caseworker will provide aftercare service and two final visits to the home within sixty(60) days of guardianship being awarded. The caregiver understands that visits</inlineHelpText>
    <label>provide aftercare service and two final</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>