force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_provide_safe_and_stable_home__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_provide_safe_and_stable_home__c</fullName>
    <inlineHelpText>The caregiver is able to provide a safe and stable home that promotes health, well-being and permanency for the child</inlineHelpText>
    <label>provide a safe and stable home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>