force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Provider_is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Provider_is_Approved__c</fullName>
    <inlineHelpText>Provider is Approved for Guardianship Assistance Program</inlineHelpText>
    <label>Provider is Approved for Guardianship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>