force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_secondary_guardian__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_secondary_guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the child demonstrate a strong attachment to the secondary guardian?</inlineHelpText>
    <label>attachment to the secondary guardian</label>
    <type>Checkbox</type>
</CustomField>