force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_services_will_be_closed_after__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_services_will_be_closed_after__c</fullName>
    <inlineHelpText>The caregiver understands that the out-of-home services will be closed after the recession of court commitment and the award of guardianship unless the caseworker and family agree that additional services are needed.</inlineHelpText>
    <label>services will be closed after the recess</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>