force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Submitted_Date__c</fullName>
    <label>Disclosure Submitted Date</label>
    <type>Date</type>
</CustomField>