force-app/main/default/objects/Permanency_Plan__c/fields/Disclosure_to_the_secondary_guardian__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_to_the_secondary_guardian__c</fullName>
    <inlineHelpText>Does the child demonstrate a strong attachment to the secondary guardian?</inlineHelpText>
    <label>attachment to the secondary guardian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>