force-app/main/default/objects/Permanency_Plan__c/fields/Discuss_and_explain_changes_in_the_child__c.field-meta.xml
<CustomField>
    <fullName>Discuss_and_explain_changes_in_the_child__c</fullName>
    <inlineHelpText>Discuss and explain changes in the child&apos;s placement during the last 6 months. Discuss any anticipated changes in placement in the next 6 months.</inlineHelpText>
    <label>Discuss and explain changes in the child</label>
    <type>TextArea</type>
</CustomField>