force-app/main/default/objects/Permanency_Plan__c/fields/Discuss_how_the_caregiver_is_meeting__c.field-meta.xml
<CustomField>
    <fullName>Discuss_how_the_caregiver_is_meeting__c</fullName>
    <inlineHelpText>Discuss how the caregiver is meeting the safety needs of the child as well as the appropriateness and the restrictiveness of the present placement, the child&apos;s adjustment to the placement, and how the placement approve meets the best interest</inlineHelpText>
    <label>Discuss how the caregiver is meeting</label>
    <type>TextArea</type>
</CustomField>