force-app/main/default/objects/Permanency_Plan__c/fields/Discuss_services_being_provided__c.field-meta.xml
<CustomField>
    <fullName>Discuss_services_being_provided__c</fullName>
    <inlineHelpText>Discuss services being provided to other significant persons including contacts with siblings, extended family, permanent foster parents, prospective adoptive parents, etc.
Discuss the child&apos;s relationship with these significant others and.</inlineHelpText>
    <label>Discuss services being provided</label>
    <type>TextArea</type>
</CustomField>