force-app/main/default/objects/Permanency_Plan__c/fields/Document_explanation_in_case_record__c.field-meta.xml
<CustomField>
    <fullName>Document_explanation_in_case_record__c</fullName>
    <inlineHelpText>Document explanation in case record</inlineHelpText>
    <label>Document explanation in case record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>