force-app/main/default/objects/Permanency_Plan__c/fields/Document_what_steps_have_been_taken__c.field-meta.xml
<CustomField>
    <fullName>Document_what_steps_have_been_taken__c</fullName>
    <inlineHelpText>Document what steps have been taken to finalize the placement for children whose permanency plan is adoption or placement at another permanent home?</inlineHelpText>
    <label>Document what steps have been taken</label>
    <type>TextArea</type>
</CustomField>