force-app/main/default/objects/Permanency_Plan__c/fields/Does_the_Provider_agree_permanency__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Provider_agree_permanency__c</fullName>
    <inlineHelpText>Does the Provider agree with the Permanency Plan?</inlineHelpText>
    <label>Does the Provider agree?(permanency)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>