force-app/main/default/objects/Permanency_Plan__c/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <label>End Reason</label>
    <type>TextArea</type>
</CustomField>