force-app/main/default/objects/Permanency_Plan__c/fields/Enter_Name_of_the_Successor_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Enter_Name_of_the_Successor_Guardian__c</fullName>
    <label>Enter Name of the Successor Guardian</label>
    <length>24</length>
    <type>Text</type>
</CustomField>