force-app/main/default/objects/Permanency_Plan__c/fields/Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Entered_By__c</fullName>
    <label>Entered By</label>
    <length>25</length>
    <type>Text</type>
</CustomField>