force-app/main/default/objects/Permanency_Plan__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <label>Event Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guardianship Application Review</fullName>
            </value>
            <value>
                <fullName>Guardianship Disclosure Review</fullName>
            </value>
            <value>
                <fullName>Guardianship Agreement Review</fullName>
            </value>
            <value>
                <fullName>Guardianship Annual Review</fullName>
            </value>
            <value>
                <fullName>Guardianship Suspension Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>