force-app/main/default/objects/Permanency_Plan__c/fields/Exception_granted_in_child_s_interest__c.field-meta.xml
<CustomField>
    <fullName>Exception_granted_in_child_s_interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Exception granted in child&apos;s best interests</inlineHelpText>
    <label>Exception granted in child&apos;s interest</label>
    <type>Checkbox</type>
</CustomField>