force-app/main/default/objects/Permanency_Plan__c/fields/family_pertaining_to_child_s_schooling__c.field-meta.xml
<CustomField>
    <fullName>family_pertaining_to_child_s_schooling__c</fullName>
    <inlineHelpText>Provided written information to the family pertaining to the child&apos;s schooling</inlineHelpText>
    <label>family pertaining to child&apos;s schooling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>